Add Dubai Cairo Melbourne Sydney Karaikudi and Riyadh city options

--- a/index.html
+++ b/index.html
@@ -909,6 +909,12 @@ function extractTimeData(hour, minutes, cityInfo) {
     <option value="Chicago, IL">Chicago</option>
     <option value="Houston, TX">Houston</option>
     <option value="Phoenix, AZ">Phoenix</option>
+    <option value="Dubai">Dubai</option>
+    <option value="Cairo">Cairo</option>
+    <option value="Melbourne">Melbourne</option>
+    <option value="Sydney">Sydney</option>
+    <option value="Karaikudi">Karaikudi</option>
+    <option value="Riyadh, Saudi Arabia">Saudi Arabia (Riyadh)</option>
   </select>
 </div>
 
