Add cache-busting to cities.js for mobile deployments

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="js/constants.js"></script>
   <script src="js/astro_calc.js"></script>
   <script src="js/charts.js"></script>
-  <script src="js/cities.js"></script>
+  <script src="js/cities.js?v=20260212-1"></script>
   <script src="js/sunrise.js"></script>
   <script src="js/dignity_and_table.js"></script>
   <script src="js/dashas.js"></script>
