--- a/index.html
+++ b/index.html
@@ -1008,6 +1008,8 @@ function extractTimeData(hour, minutes, cityInfo) {
     <option value="Chennai">Chennai</option>
     <option value="Tiruchirappalli">Tiruchirappalli</option>
     <option value="Madurai">Madurai</option>
+    <option value="Karaikudi">Karaikudi</option>
+    <option value="Ramanathapuram">Ramanathapuram</option>
     <option value="Vellore">Vellore</option>
     <option value="Salem">Salem</option>
     <option value="Coimbatore">Coimbatore</option>
@@ -1020,6 +1022,7 @@ function extractTimeData(hour, minutes, cityInfo) {
     <option value="New Delhi">New Delhi</option>
     <option value="Mumbai">Mumbai</option>
     <option value="Kolkata">Kolkata</option>
+    <option value="Colombo">Colombo</option>
     <option value="London">London</option>
     <option value="New York, NY">New York</option>
     <option value="Westlake, OH">Westlake</option>
@@ -1031,7 +1034,6 @@ function extractTimeData(hour, minutes, cityInfo) {
     <option value="Cairo">Cairo</option>
     <option value="Melbourne">Melbourne</option>
     <option value="Sydney">Sydney</option>
-    <option value="Karaikudi">Karaikudi</option>
     <option value="Riyadh, Saudi Arabia">Saudi Arabia (Riyadh)</option>
   </select>
 </div>
